--- a/style.css
+++ b/style.css
@@ -1068,6 +1068,12 @@ a {
   min-height: 100vh;
 }
 
+@media (max-width: 576px) {
+  .cover {
+    min-height: 70vh;
+  }
+}
+
 .countdown_link {
   display: flex;
 }
@@ -1553,6 +1559,7 @@ a {
   }
   .accordion-container .accordion-title {
     padding: 15px;
+    padding-right: 25px;
   }
   .accordion-content {
     padding: 15px;
