--- a/scss/components/_subfooter.scss
+++ b/scss/components/_subfooter.scss
@@ -1,5 +1,5 @@
 .sub-footer {
-  background-image: url(/media/img/BG_Image_02.jpg);
+  background-image: url(/grizzly-elite/media/img/BG_Image_02.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
