--- a/scss/components/_payment.scss
+++ b/scss/components/_payment.scss
@@ -81,7 +81,7 @@
 }
 
 .payment_cc-inputs #ccSecurityCode {
-  background-image: url(./media/icons/CC_Icon_01.png);
+  background-image: url(/grizzly-elite/media/icons/CC_Icon_01.png);
   background-repeat: no-repeat;
   background-position: right;
   background-position: calc(100% - 10px) 50%;
