Updated media path

--- a/scss/components/_payment.scss
+++ b/scss/components/_payment.scss
@@ -68,7 +68,7 @@
 }
 
 .payment_cc-inputs #ccNumber {
-  background-image: url(./media/icons/Banks_Icon.png);
+  background-image: url(/grizzly-elite/media/icons/Banks_Icon.png);
   background-repeat: no-repeat;
   background-position: calc(100% - 10px) 50%;
   font-size: 18px;
